--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2237,6 +2237,9 @@ periodics:
       - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
       - "./test/performance-tests.sh"
       volumeMounts:
+      - name: monitoring-db-credentials
+        mountPath: /secrets/cloudsql/monitoringdb
+        readOnly: true
       - name: test-account
         mountPath: /etc/test-account
         readOnly: true
@@ -2250,6 +2253,9 @@ periodics:
       - name: E2E_CLUSTER_REGION
         value: us-central1
     volumes:
+    - name: monitoring-db-credentials
+      secret:
+        secretName: monitoring-db-credentials
     - name: test-account
       secret:
         secretName: test-account
@@ -2274,6 +2280,9 @@ periodics:
       - "./test/performance-tests.sh"
       - "--mesh"
       volumeMounts:
+      - name: monitoring-db-credentials
+        mountPath: /secrets/cloudsql/monitoringdb
+        readOnly: true
       - name: test-account
         mountPath: /etc/test-account
         readOnly: true
@@ -2287,6 +2296,9 @@ periodics:
       - name: E2E_CLUSTER_REGION
         value: us-central1
     volumes:
+    - name: monitoring-db-credentials
+      secret:
+        secretName: monitoring-db-credentials
     - name: test-account
       secret:
         secretName: test-account
