Rename conformance-tests tab to conformance
It's simpler.

--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -236,7 +236,7 @@ dashboards:
   - name: continuous
     test_group_name: ci-knative-serving-continuous
     base_options: "sort-by-name="
-  - name: conformance-tests
+  - name: conformance
     test_group_name: ci-knative-serving-continuous
     base_options: "include-filter-by-regex=test/conformance/&sort-by-name="
   - name: istio-1.0.7-mesh
