--- a/ci/prow/plugins.yaml
+++ b/ci/prow/plugins.yaml
@@ -16,8 +16,8 @@ approve:
 - repos:
   - knative
   - GoogleCloudPlatform/cloud-run-events
-  implicit_self_approve: true
-  review_acts_as_approve: true
+  require_self_approval: false
+  ignore_review_state: false
 
 repo_milestone:
   knative:
