add pubsub labels to continuous job

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1764,6 +1764,10 @@ periodics:
 - cron: "1 */2 * * *"
   name: ci-knative-serving-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-serving-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -2357,6 +2361,10 @@ periodics:
 - cron: "15 * * * *"
   name: ci-knative-build-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-build-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -2663,6 +2671,10 @@ periodics:
 - cron: "45 * * * *"
   name: ci-knative-client-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-client-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -2833,6 +2845,10 @@ periodics:
 - cron: "50 * * * *"
   name: ci-knative-docs-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-docs-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -2893,6 +2909,10 @@ periodics:
 - cron: "30 * * * *"
   name: ci-knative-eventing-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-eventing-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3151,6 +3171,10 @@ periodics:
 - cron: "30 * * * *"
   name: ci-knative-eventing-contrib-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-eventing-contrib-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3409,6 +3433,10 @@ periodics:
 - cron: "40 * * * *"
   name: ci-knative-build-templates-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-build-templates-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3443,6 +3471,10 @@ periodics:
 - cron: "45 * * * *"
   name: ci-knative-pkg-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-pkg-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3495,6 +3527,10 @@ periodics:
 - cron: "30 * * * *"
   name: ci-knative-caching-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-caching-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3547,6 +3583,10 @@ periodics:
 - cron: "30 * * * *"
   name: ci-knative-observability-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-knative-observability-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3581,6 +3621,10 @@ periodics:
 - cron: "45 * * * *"
   name: ci-googlecloudplatform-cloud-run-events-continuous
   agent: kubernetes
+  labels:
+    prow.k8s.io/pubsub-project: knative-tests
+    prow.k8s.io/pubsub-topic: knative-monitoring
+    prow.k8s.io/pubsub-runID: ci-googlecloudplatform-cloud-run-events-continuous
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/prow-tests:stable
