--- a/ci/prow/templates/prow_postsubmit_gocoverage_job.yaml
+++ b/ci/prow/templates/prow_postsubmit_gocoverage_job.yaml
@@ -2,6 +2,7 @@
     branches:
     - master
     agent: kubernetes
+    [[indent_section 8 "labels" .Base.Labels]]
     decorate: true
     clone_uri: [[.Base.CloneURI]]
     spec:
