--- a/ci/prow/templates/prow_periodic_test_job.yaml
+++ b/ci/prow/templates/prow_periodic_test_job.yaml
@@ -1,6 +1,7 @@
 - cron: "[[.CronString]]"
   name: [[.PeriodicJobName]]
   agent: kubernetes
+  [[indent_section 4 "labels" .Base.Labels]]
   spec:
     containers:
     - image: [[.Base.Image]]
@@ -21,3 +22,4 @@
       [[indent_section 6 "volumeMounts" .Base.VolumeMounts]]
       [[indent_section 6 "env" .Base.Env]]
     [[indent_section 4 "volumes" .Base.Volumes]]
+
