--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -125,40 +125,16 @@ periodics:
       cron: "45 8 * * *" # Run at 01:45 PST every day (08:45 UTC)
     - custom-job: istio-1.0.7-mesh
       cron: "7 */2 * * *" # Run every other hour and seven minute
-      command:
-      - "./test/e2e-tests.sh"
-      args:
-      - "--istio-version"
-      - "1.0.7"
-      - "--mesh"
-      timeout: 100
+      full-command: "./test/e2e-tests.sh --istio-version 1.0.7 --mesh"
     - custom-job: istio-1.0.7-no-mesh
       cron: "22 */2 * * *" # Run every other hour and twenty-two minute
-      command:
-      - "./test/e2e-tests.sh"
-      args:
-      - "--istio-version"
-      - "1.0.7"
-      - "--no-mesh"
-      timeout: 100
+      full-command: "./test/e2e-tests.sh --istio-version 1.0.7 --no-mesh"
     - custom-job: istio-1.1.7-mesh
       cron: "37 */2 * * *" # Run every other hour and thirty-seven minute
-      command:
-      - "./test/e2e-tests.sh"
-      args:
-      - "--istio-version"
-      - "1.1.7"
-      - "--mesh"
-      timeout: 100
+      full-command: "./test/e2e-tests.sh --istio-version 1.1.7 --mesh"
     - custom-job: istio-1.1.7-no-mesh
       cron: "52 */2 * * *" # Run every other hour and fifty-two minute
-      command:
-      - "./test/e2e-tests.sh"
-      args:
-      - "--istio-version"
-      - "1.1.7"
-      - "--no-mesh"
-      timeout: 100
+      full-command: "./test/e2e-tests.sh --istio-version 1.1.7 --no-mesh"
     - nightly: true
       cron: "1 8 * * *" # Run at 01:01PST every day (08:01 UTC)
     - dot-release: true
