--- a/ci/prow/templates/prow_config_header.yaml
+++ b/ci/prow/templates/prow_config_header.yaml
@@ -69,6 +69,7 @@ tide:
     - knative/caching
     - knative/website
     - knative/community
+    - knative/sample-controller
     - GoogleCloudPlatform/cloud-run-events
     labels:
     - lgtm
