--- a/ci/prow/boskos/config.yaml
+++ b/ci/prow/boskos/config.yaml
@@ -104,7 +104,7 @@ metadata:
     app: boskos-janitor
   namespace: test-pods
 spec:
-  replicas: 12  # 12 distributed janitor instances
+  replicas: 40  # This number distributed janitor instances. Should keep around the same number as number of projects.
   template:
     metadata:
       labels:
