Add a new integration tests job for knative client for latest release

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -52,6 +52,10 @@ presubmits:
     - unit-tests: true
     - integration-tests: true
     - go-coverage: true
+    - custom-test: integration-tests-latest-release
+      always_run: true
+      command:
+        - "./test/presubmit-integration-tests-latest-release.sh"
 
   knative/eventing:
     - build-tests: true
