--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -195,6 +195,9 @@ periodics:
 
   knative/sample-controller:
     - continuous: true
+  
+  knative/test-infra:
+    - continuous: true
 
   GoogleCloudPlatform/cloud-run-events:
     - continuous: true
