--- a/ci/prow/templates/prow_config_header.yaml
+++ b/ci/prow/templates/prow_config_header.yaml
@@ -86,6 +86,7 @@ tide:
     - knative/website
     - knative/community
     - knative/sample-controller
+    - knative/serving-operator
     - GoogleCloudPlatform/cloud-run-events
     labels:
     - lgtm
