Prow jobs with path_alias as knative.dev

--- a/ci/prow/templates/prow_periodic_test_job.yaml
+++ b/ci/prow/templates/prow_periodic_test_job.yaml
@@ -2,21 +2,15 @@
   name: [[.PeriodicJobName]]
   agent: kubernetes
   [[indent_section 4 "labels" .Base.Labels]]
+  decorate: true
+  [[indent_section 2 "extra_refs" .Base.ExtraRefs]]
   spec:
     containers:
     - image: [[.Base.Image]]
       imagePullPolicy: Always
+      command:
+      - runner.sh
       args:
-      - "--scenario=kubernetes_execute_bazel"
-      - "--clean"
-      - "--job=$(JOB_NAME)"
-      - "--repo=[[repo .Base]]"
-      - "--root=/go/src"
-      - "--service-account=[[.Base.ServiceAccount]]"
-      - "--upload=[[.Base.GcsLogDir]]"
-      - "--timeout=[[.Base.Timeout]]" # Avoid overrun
-      - "--" # end bootstrap args, scenario args below
-      - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
       [[indent_array 6 .PeriodicCommand]]
       [[indent_section 8 "securityContext" .Base.SecurityContext]]
       [[indent_section 6 "volumeMounts" .Base.VolumeMounts]]
