--- a/ci/prow/templates/prow_presubmit_gocoverate_job.yaml
+++ b/ci/prow/templates/prow_presubmit_gocoverate_job.yaml
@@ -7,7 +7,7 @@
     trigger: "(?m)^/test (all|[[.PresubmitPullJobName]]),?(\\s+|$)"
     optional: true
     decorate: true
-    clone_uri: [[.Base.CloneURI]]
+    [[.Base.PathAliasFull]]
     spec:
       containers:
       - image: [[.Base.Image]]
