add perf testing job for eventing

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -170,6 +170,7 @@ periodics:
     - nightly: true
     - dot-release: true
     - auto-release: true
+    - performance: true
 
   knative/eventing-contrib:
     - continuous: true
