--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -3218,6 +3218,48 @@ periodics:
     - name: release-account
       secret:
         secretName: release-account
+- cron: "17 8 * * *"
+  name: ci-knative-eventing-performance
+  agent: kubernetes
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      args:
+      - "--scenario=kubernetes_execute_bazel"
+      - "--clean"
+      - "--job=$(JOB_NAME)"
+      - "--repo=github.com/knative/eventing"
+      - "--root=/go/src"
+      - "--service-account=/etc/test-account/service-account.json"
+      - "--upload=gs://knative-prow/logs"
+      - "--timeout=120" # Avoid overrun
+      - "--" # end bootstrap args, scenario args below
+      - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
+      - "./test/performance-tests.sh"
+      volumeMounts:
+      - name: monitoring-db-credentials
+        mountPath: /secrets/cloudsql/monitoringdb
+        readOnly: true
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      env:
+      - name: E2E_MIN_CLUSTER_NODES
+        value: "1"
+      - name: E2E_MAX_CLUSTER_NODES
+        value: "1"
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: E2E_CLUSTER_REGION
+        value: us-central1
+    volumes:
+    - name: monitoring-db-credentials
+      secret:
+        secretName: monitoring-db-credentials
+    - name: test-account
+      secret:
+        secretName: test-account
 - cron: "0 1 * * *"
   name: ci-knative-eventing-go-coverage
   labels:
