Limit each job to use only 2Gb cpu

--- a/ci/prow/templates/prow_periodic_custom_job.yaml
+++ b/ci/prow/templates/prow_periodic_custom_job.yaml
@@ -15,3 +15,7 @@
       [[indent_section 6 "volumeMounts" .Base.VolumeMounts]]
       [[indent_section 6 "env" .Base.Env]]
     [[indent_section 4 "volumes" .Base.Volumes]]
+    resources:
+      requests:
+        memory: "9000Mi"
+        cpu: 2000m
