--- a/ci/prow/templates/prow_presubmit_gocoverate_job.yaml
+++ b/ci/prow/templates/prow_presubmit_gocoverate_job.yaml
@@ -22,3 +22,7 @@
         [[indent_section 8 "volumeMounts" .Base.VolumeMounts]]
         [[indent_section 8 "env" .Base.Env]]
       [[indent_section 6 "volumes" .Base.Volumes]]
+      resources:
+        requests:
+          memory: "9000Mi"
+          cpu: 2000m
