--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -127,6 +127,8 @@ periodics:
       release: "0.5"
     - branch-ci: true
       release: "0.6"
+    - branch-ci: true
+      release: "0.7"
     - custom-job: istio-1.0.7-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.0.7 --mesh"
     - custom-job: istio-1.0.7-no-mesh
