--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -60,20 +60,28 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-continuous
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
-- name: ci-knative-serving-istio-1.0.7-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.0.7-mesh
+- name: ci-knative-serving-istio-1.0-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.0-mesh
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
-- name: ci-knative-serving-istio-1.0.7-no-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.0.7-no-mesh
+- name: ci-knative-serving-istio-1.0-no-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.0-no-mesh
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
-- name: ci-knative-serving-istio-1.1.7-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.1.7-mesh
+- name: ci-knative-serving-istio-1.1-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.1-mesh
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
-- name: ci-knative-serving-istio-1.1.7-no-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.1.7-no-mesh
+- name: ci-knative-serving-istio-1.1-no-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.1-no-mesh
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
+- name: ci-knative-serving-istio-1.2-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.2-mesh
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
+- name: ci-knative-serving-istio-1.2-no-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.2-no-mesh
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
 - name: ci-knative-serving-k8s-1.12-istio-1.1
@@ -290,17 +298,23 @@ dashboards:
   - name: conformance
     test_group_name: ci-knative-serving-continuous
     base_options: "include-filter-by-regex=test/conformance/&sort-by-name="
-  - name: istio-1.0.7-mesh
-    test_group_name: ci-knative-serving-istio-1.0.7-mesh
+  - name: istio-1.0-mesh
+    test_group_name: ci-knative-serving-istio-1.0-mesh
     base_options: "sort-by-name="
-  - name: istio-1.0.7-no-mesh
-    test_group_name: ci-knative-serving-istio-1.0.7-no-mesh
+  - name: istio-1.0-no-mesh
+    test_group_name: ci-knative-serving-istio-1.0-no-mesh
     base_options: "sort-by-name="
-  - name: istio-1.1.7-mesh
-    test_group_name: ci-knative-serving-istio-1.1.7-mesh
+  - name: istio-1.1-mesh
+    test_group_name: ci-knative-serving-istio-1.1-mesh
     base_options: "sort-by-name="
-  - name: istio-1.1.7-no-mesh
-    test_group_name: ci-knative-serving-istio-1.1.7-no-mesh
+  - name: istio-1.1-no-mesh
+    test_group_name: ci-knative-serving-istio-1.1-no-mesh
+    base_options: "sort-by-name="
+  - name: istio-1.2-mesh
+    test_group_name: ci-knative-serving-istio-1.2-mesh
+    base_options: "sort-by-name="
+  - name: istio-1.2-no-mesh
+    test_group_name: ci-knative-serving-istio-1.2-no-mesh
     base_options: "sort-by-name="
   - name: k8s-1.12-istio-1.1
     test_group_name: ci-knative-serving-k8s-1.12-istio-1.1
