--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -137,14 +137,18 @@ periodics:
       release: "0.6"
     - branch-ci: true
       release: "0.7"
-    - custom-job: istio-1.0.7-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.0.7 --mesh"
-    - custom-job: istio-1.0.7-no-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.0.7 --no-mesh"
-    - custom-job: istio-1.1.7-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.1.7 --mesh"
-    - custom-job: istio-1.1.7-no-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.1.7 --no-mesh"
+    - custom-job: istio-1.0-mesh
+      full-command: "./test/e2e-tests.sh --istio-version 1.0-latest --mesh"
+    - custom-job: istio-1.0-no-mesh
+      full-command: "./test/e2e-tests.sh --istio-version 1.0-latest --no-mesh"
+    - custom-job: istio-1.1-mesh
+      full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --mesh"
+    - custom-job: istio-1.1-no-mesh
+      full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --no-mesh"
+    - custom-job: istio-1.2-mesh
+      full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
+    - custom-job: istio-1.2-no-mesh
+      full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
     - custom-job: k8s-1.12-istio-1.1
       # Add single quote so that it's not parsed as a nubmer in yaml config
       full-command: "./test/e2e-tests.sh --cluster-version '1.12' --istio-version 1.1-latest"
